[package]
name = "my_dev_tool"
version = "0.1.0"
edition = "2021"
authors = ["tommy <mcg915881127@163.com>"]

# 以下是描述和文档链接等可选字段
description = "A useful development tool for various tasks"
documentation = "https://github.com/maochunguang/my_dev_tool"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.0"
chrono = "0.4"
urlencoding = "2.1"